book & review mappers refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
 jwt.secret=hie4YsPd2pcuaA99cd3d6hbs*4k$&z4pGMY
 jwt.expiry=14400000
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
