--- a/api/pom.xml
+++ b/api/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>json-path</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>22.4.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
