--- a/api/pom.xml
+++ b/api/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>stripe-java</artifactId>
 			<version>22.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 
 	</dependencies>
 
