--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # suppress inspection "UnusedProperty" for whole file
 
 server.port=8081
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/bookstore-springboot-api?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/bookstore-springboot-api?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.password=${MYSQL_PASSWORD:admin}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.devtools.restart.enabled=true
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 jwt.secret=hie4YsPd2pcuaA99cd3d6hbs*4k$&z4pGMY
 jwt.expiry=259200000
 
-stripe.key=${STRIPE_KEY}
-stripe.webhookEndpointSecret=${STRIPE_WEBHOOK_SECRET}
+stripe.key=${STRIPE_KEY:TESTKEY}
+stripe.webhookEndpointSecret=${STRIPE_WEBHOOK_SECRET:TESTSECRET}
 ui.baseUrl=http://localhost:4200
 
 #logging.level.org.hibernate.SQL=DEBUG
