--- a/ui/package.json
+++ b/ui/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.1",
+    "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "ngx-toastr": "^15.2.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
