--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ jwt.expiry=259200000
 
 stripe.key=${STRIPE_KEY:TESTKEY}
 stripe.webhookEndpointSecret=${STRIPE_WEBHOOK_SECRET:TESTSECRET}
-ui.baseUrl=http://localhost:4200
+ui.baseUrl=${UI_BASE_URL:http://localhost:4200}
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
