--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.devtools.restart.enabled=true
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-jwt.secret=hie4YsPd2pcuaA99cd3d6hbs*4k$&z4pGMY
+jwt.secret=${JWT_SECRET:TESTSECRET}
 jwt.expiry=259200000
 
 stripe.key=${STRIPE_KEY:TESTKEY}
