--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -24,6 +24,18 @@ services:
     networks:
       - spring-net
     restart: unless-stopped
+#  transport-api:
+#    image: rohans433/transport-api:latest
+#    environment:
+#      MYSQL_HOST: ${MYSQL_HOST}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#      MYSQL_PORT: ${MYSQL_PORT}
+#      JWT_SECRET: ${JWT_SECRET}
+#    ports:
+#      - "5050:8080"
+#    networks:
+#      - spring-net
+#    restart: unless-stopped
 
 networks:
   spring-net:
